# dwr-diffusion

./: .gitignore  CMakeLists.txt  README.md
bash/: authors-from-git-history.sh  clean-git-assume_unchanged-kdev_include_paths.sh  clean-kdev_include_paths.sh  set-git-assume_unchanged-kdev_include_paths.sh  set-kdev_include_paths.sh
cmake/: AddAdditionalCompilerWarnings.cmake  CreateDetailedLog.cmake  InvokeAutopilot.cmake
doc/: Doxyfile
include/DTM++/base/: Function.tpl.hh  LogStream.hh  Problem.hh  TensorFunction.tpl.hh
include/DTM++/io/: .kdev_include_paths  DataOutput.tpl.hh
include/DTM++/types/: slabs.tpl.hh  storage_data_vectors.tpl.hh
include/Heat/: Heat_cG_DWR.tpl.hh  Heat_cGp_dG0__cGq_cG1_DWR.tpl.hh
include/Heat/BoundaryValues/: BoundaryValues.hh  BoundaryValues_Hartmann.tpl.hh  BoundaryValues_MH.tpl.hh  BoundaryValues_Sinus.tpl.hh  BoundaryValues_TF.tpl.hh  BoundaryValues_TH.tpl.hh  BoundaryValues_Xquadrat.tpl.hh
include/Heat/ErrorEstimator/: DWR_ErrorEstimator.tpl.hh  ErrorEstimators.hh
include/Heat/Forces/: Forces.hh  Hartmann.tpl.hh  Moving_Hump.tpl.hh  Sinus_Sinus.tpl.hh  Tangens_hyperbolicus.tpl.hh  Testfunktion.tpl.hh  Xquadrat.tpl.hh
include/Heat/Grid/: Grid_DWR.tpl.hh  Grid_DWR_0.tpl.hh  Grids.hh  slabs.tpl.hh
include/Heat/Storage/: Data_vectors.tpl.hh
include/Heat/types/: boundary_id.hh
include/diffusion/: Diffusion_DWR__cGp_dG0__cGq_cG1.tpl.hh
include/diffusion/ControlVolume/: ControlVolume_Selector.tpl.hh  ControlVolume_hyper_rectangle.tpl.hh  ControlVolume_moving_hyper_rectangle.tpl.hh  ControlVolumes.hh
include/diffusion/Density/: Density_Selector.tpl.hh
include/diffusion/DirichletBoundary/: DirichletBoundaries.hh  DirichletBoundary_Hartmann142.tpl.hh  DirichletBoundary_KoecherBruchhaeuser1.tpl.hh  DirichletBoundary_KoecherBruchhaeuser2.tpl.hh  DirichletBoundary_Selector.tpl.hh
include/diffusion/ErrorEstimator/: ErrorEstimator_DWR__cGp_dG0__cGq_cG1.tpl.hh  ErrorEstimators.hh
include/diffusion/ExactSolution/: ExactSolution_Hartmann142.tpl.hh  ExactSolution_KoecherBruchhaeuser1.tpl.hh  ExactSolution_KoecherBruchhaeuser2.tpl.hh  ExactSolution_Selector.tpl.hh  ExactSolutions.hh
include/diffusion/Force/: Force_Hartmann142.tpl.hh  Force_KoecherBruchhaeuser1.tpl.hh  Force_KoecherBruchhaeuser2.tpl.hh  Force_Selector.tpl.hh  Forces.hh
include/diffusion/InitialValue/: InitialValue_Hartmann142.tpl.hh  InitialValue_KoecherBruchhaeuser1.tpl.hh  InitialValue_KoecherBruchhaeuser2.tpl.hh  InitialValue_Selector.tpl.hh  InitialValues.hh
include/heat/: Heat_DWR__cGp_dG0__cGq_cG1.tpl.hh
input/: Hartmann142.prm  KoecherBruchhaeuser1.prm  KoecherBruchhaeuser2.prm  KoecherBruchhaeuser2a.prm  KoecherBruchhaeuser2b.prm  KoecherBruchhaeuser2c.prm  KoecherBruchhaeuser2d.prm  default.prm
source/: main.cc
source/Heat/: Heat_cG_DWR.inst.in  Heat_cG_DWR.tpl.cc  Heat_cGp_dG0__cGq_cG1_DWR.inst.in  Heat_cGp_dG0__cGq_cG1_DWR.tpl.cc
source/diffusion/: Diffusion_DWR__cGp_dG0__cGq_cG1.inst.in  Diffusion_DWR__cGp_dG0__cGq_cG1.tpl.cc
source/heat/: Heat_DWR__cGp_dG0__cGq_cG1.inst.in  Heat_DWR__cGp_dG0__cGq_cG1.tpl.cc
(+262 files in other folders)
